added attendance show button and mroe optimise

--- a/Demo.MenuLoad/Views/Attendance/Index.cshtml
+++ b/Demo.MenuLoad/Views/Attendance/Index.cshtml
@@ -2,6 +2,30 @@
 @{
     ViewBag.Title = "Attendance";
 }
+@*<div class="box box-default">
+    <div class="box-header with-border">
+        <h3 class="box-title"><i class="fa fa-tag"></i> Attendance Details</h3>
+        <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                <i class="fa fa-minus"></i>
+            </button>
+        </div>
+        <!-- /.box-tools -->
+    </div>
+    <!-- /.box-header -->
+    <div class="box-body">
+        <div class="row">
+            <div class="col-md-3 col-sm-4 col-xs-6">
+                <div class="form-group">
+                    <label>Name: </label>
+                    <label class="name" id="attendanceName">Md. Yeasin</label>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.box-body -->
+</div>*@
 
 <div class="box box-default">
     <div class="box box-default">
@@ -25,9 +49,7 @@
                         <th>Remarks</th>
                     </tr>
                 </thead>
-                <tbody id="attendanceBody">
-                
-                </tbody>
+                <tbody id="attendanceBody"></tbody>
                 <tfoot>
                     <tr>
                         <th class="hidden">id</th>
