--- a/Demo.MenuLoad/Views/Home/Index.cshtml
+++ b/Demo.MenuLoad/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
             <span class="info-box-icon bg-blue"><i class="fa fa-address-card"></i></span>
             <div class="info-box-content box-content-center">
                 <span class="info-box-number">Attendance Details 
-                    <input class="btn btn-primary btn-sm pull-right" src="../Attendance/Index.cshtml" type="button" value="Show" />
+                    <input class="btn btn-primary btn-sm pull-right" id="attendanceViewButton" type="button" value="Show" />
                 </span>
                 <span class="info-box-text"><small>Daily Attendance (Details View)</small></span>
                 
@@ -340,5 +340,6 @@
 
     <script src="~/Controllers/Scripts/mealController.js"></script>
     <script src="~/Controllers/Scripts/taskController.js"></script>
+    <script src="~/Controllers/Scripts/homeController.js"></script>
 
 }
